Fix sonar problems